--- a/sass/globals/_cards.scss
+++ b/sass/globals/_cards.scss
@@ -68,20 +68,28 @@
 }
 
 .card__text {
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 23.4px;
   color: c.$black;
+
+  @media screen and (min-width: 80rem) {
+    font-size: 1.125rem;
+  }
 }
 
 .card__button {
-  padding: 1.25rem 2.5rem;
+  padding: 0.625rem 1.25rem;
   border-radius: 2.5rem;
   display: flex;
   font-size: 1.125rem;
   font-weight: 700;
   line-height: 21.13px;
   letter-spacing: 0.01em;
+
+  @media screen and (min-width: 80rem) {
+    padding: 1.25rem 2.5rem;
+  }
 }
 
 .card__button--primary {
