--- a/sass/globals/_font.scss
+++ b/sass/globals/_font.scss
@@ -25,14 +25,14 @@
 $font: "Raleway", serif;
 
 .copy-large {
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   font-weight: 300;
 }
 
 .heading-large {
-  font-size: 2.75rem;
+  font-size: 2rem;
   font-weight: 700;
-  line-height: 51.66px;
+  line-height: 39.66px;
 }
 
 @media screen and (min-width: 80rem) {
@@ -42,5 +42,14 @@ $font: "Raleway", serif;
     top: 40%;
     transform: translate(-50%, -40%) rotate(90deg);
     white-space: nowrap;
+  }
+
+  .copy-large {
+    font-size: 1.25rem;
+  }
+
+  .heading-large {
+    font-size: 2.75rem;
+    line-height: 3.22875rem;
   }
 }
